<resources>
    <string name="app_name">WeatherApp</string>

	<!--Main-->
	<string name="main_toolbar_title">Cities</string>
	<string name="item_city_temperature">+%.0f&#xb0;</string>
	<string name="dialog_add_city_title">Enter city name and add it to your list</string>
	<string name="dialog_add_city_title_btn">Add</string>
	<string name="dialog_add_city_no_name_error">You should enter city name first</string>

	<!--Detailed-->
	<string name="detailed_label_temp">Temperature</string>
	<string name="detailed_label_humidity">Humidity</string>
	<string name="detailed_label_pressure">Pressure</string>
	<string name="detailed_label_wind">Wind</string>
	<string name="detailed_label_rain">Rain</string>
	<string name="detailed_label_clouds">Cloudiness</string>
	<string name="detailed_temp">+%.0f&#xb0;</string>
	<string name="detailed_humidity">%d%%</string>
	<string name="detailed_pressure">%d hPa</string>
	<string name="detailed_wind">%.0f m/s</string>
	<string name="detailed_rain">%d mm</string>
	<string name="detailed_clouds">%d%%</string>

	<!--Exceptions-->
	<string name="error_no_connection">Check your internet connection</string>
	<string name="error_city_not_found">City not found</string>
	<string name="error_magic">Network issues. Try later</string>

</resources>
